# cryptogull

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  azure-pipelines.yml  bot.py  config.example.yml  config.yml  config.yml.example  font.py  gamedata.py  pyproject.toml  qud_decode.py  qud_decode_test.py  run.sh  shared.py
.github/workflows/: lint.yml
bot/: __main__.py  cryptogull.py
bot/cogs/: blueprints.py  bugs.py  cryochamber.py  decode.py  gamever.py  markov.py  melindaprotocol.py  orb.py  pronouns.py  reddit.py  say.py  theinherentlyindescribablenatureoftheuniverse.py  tiles.py  wiki.py
bot/helpers/: corpus.py  font.py  qud_decode.py  tile_variations.py  tiles.py  wiki_page.py
cogs/: LibraryCorpus.json  blueprints.py  bugs.py  cryochamber.py  decode.py  dice.py  hitdabricks.py  markov.py  melindaprotocol.py  pronouns.py  reddit.py  roll.py  say.py  tiles.py  wiki.py
helpers/: __init__.py  corpus.py  corpus_test.py  find_blueprints.py  font.py  qud_decode.py  qud_decode_test.py  tile_variations.py  wiki_page.py
tests/: corpus_test.py  qud_decode_test.py  random_tile_test.py
