[tool.poetry]
name = "cryptogull"
version = "1.0.0"
description = "Community bot for the Caves of Qud Discord server"
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "1.7.3"
PyYAML = "^6.0"
fuzzywuzzy = "^0.18.0"
oauthlib = "^3.2.2"
asyncpraw = "^7.6.0"
hagadias = "1.2.1"
Levenshtein = "^0.21.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pre-commit = "^3.2.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
