[tool.poetry]
name = "cryptogull"
version = "1.0.0"
description = "Community bot for the Caves of Qud Discord server"
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
"discord.py" = "1.7.3"
PyYAML = "^6.0"
fuzzywuzzy = "^0.18"
asyncpraw = "^7.6"
hagadias = {git = "https://github.com/TrashMonks/hagadias.git", branch = "main"}
Levenshtein = "^0.26"
legacy-cgi = "^2.6"
audioop-lts = "^0.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pre-commit = "^3.2.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
